deploy/kubernetes/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spring-apiserver
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "spring-apiserver.cluster1.joshgav.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: spring-apiserver
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
